--- a/CustomRPC/MainForm.ro.resx
+++ b/CustomRPC/MainForm.ro.resx
@@ -118,10 +118,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="trayIcon.BalloonTipText" xml:space="preserve">
-    <value>Dă click de două ori pe iconiță ca să o vezi din nou, ori apasă click dreapta ca să ieși din program.</value>
+    <value>Dă click de două ori pe iconiță ca să o vezi din nou, ori apasă click dreapta ca să închizi programul.</value>
   </data>
   <data name="trayIcon.BalloonTipTitle" xml:space="preserve">
-    <value>Aplicația va merge în tray icons.</value>
+    <value>Aplicația va merge în tray.</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="trayMenuStrip.Size" type="System.Drawing.Size, System.Drawing">
@@ -203,7 +203,7 @@
     <value>247, 22</value>
   </data>
   <data name="runOnStartupToolStripMenuItem.Text" xml:space="preserve">
-    <value>Pornește deodată cu calculatorul</value>
+    <value>Pornește cu sistemul</value>
   </data>
   <data name="startMinimizedToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>247, 22</value>
@@ -224,7 +224,7 @@
     <value>247, 22</value>
   </data>
   <data name="checkUpdatesToolStripMenuItem.Text" xml:space="preserve">
-    <value>Verifică pentru actualizări noi</value>
+    <value>Caută actualizări</value>
   </data>
   <data name="allowAnalyticsToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>247, 22</value>
@@ -314,7 +314,7 @@
     <value>258, 22</value>
   </data>
   <data name="aboutToolStripMenuItem.Text" xml:space="preserve">
-    <value>Despre</value>
+    <value>Despre...</value>
   </data>
   <data name="downloadUpdateToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>131, 20</value>
@@ -365,7 +365,7 @@
     <value>A doua linie în prezență.</value>
   </data>
   <data name="labelSmallKey.ToolTip" xml:space="preserve">
-    <value>Numele materialului pentru imaginea mică sau adresa URL a imaginii.</value>
+    <value>Numele pentru imaginea mică sau adresa URL a imaginii.</value>
   </data>
   <data name="labelSmallText.ToolTip" xml:space="preserve">
     <value>Text afișat când treceți cu mouse-ul pe imaginea mică.</value>
@@ -374,7 +374,7 @@
     <value>Text afișat când treceți cu mouse-ul pe imaginea mare.</value>
   </data>
   <data name="labelLargeKey.ToolTip" xml:space="preserve">
-    <value>Numele imaginii pentru imaginea mare sau adresă URL.</value>
+    <value>Numele pentru imaginea mare sau adresă URL.</value>
   </data>
   <data name="labelSmall.Size" type="System.Drawing.Size, System.Drawing">
     <value>84, 14</value>
@@ -422,11 +422,12 @@
     <value>Arată timpul tău în format de 24h.</value>
   </data>
   <data name="labelTimestamp.ToolTip" xml:space="preserve">
-    <value>Stabilește marcajul de timp pentru status, care apare sub textul de mai sus. Cronometrele de status au o limită de 24 de ore, ceea ce înseamnă că după 24 de ore timpul se va întoarce la 0:00.</value>
+    <value>Stabilește marcajul de timp pentru status, care apare sub textul de mai sus.
+Cronometrele de status au o limită de 24 de ore, ceea ce înseamnă că după 24 de ore timpul se va întoarce la 0:00.</value>
   </data>
   <data name="labelParty.ToolTip" xml:space="preserve">
-    <value>Numărul de jucători din petrecerea curentă care apare lângă câmpul 'Stare'.
-Pentru a avea efect,ambele câmpuri trebuie să aibă o valoare mai mare decât 0.</value>
+    <value>Numărul de jucători din activitatea curentă care apare lângă câmpul 'Stare'.
+Pentru a avea efect, ambele câmpuri trebuie să aibă o valoare mai mare decât 0.</value>
   </data>
   <data name="radioButtonCustom.Size" type="System.Drawing.Size, System.Drawing">
     <value>172, 18</value>
@@ -484,5 +485,8 @@ Pentru a avea efect,ambele câmpuri trebuie să aibă o valoare mai mare decât 
   </data>
   <data name="newPresetToolStripMenuItem.Text" xml:space="preserve">
     <value>Preset nou</value>
+  </data>
+  <data name="labelType.ToolTip" xml:space="preserve">
+    <value>Tipul de activitate al prezenței.</value>
   </data>
 </root>
