--- a/CustomRPC/Strings.id.resx
+++ b/CustomRPC/Strings.id.resx
@@ -194,4 +194,20 @@ Tekan Ya untuk mereset pengaturan, tekan Tidak untuk keluar.</value>
     <value>Apakah kamu yakin ingin mengulangi dari awal?
 Ini tidak dapat diurungkan.</value>
   </data>
+  <data name="deleteSettings" xml:space="preserve">
+    <value>Apakah Anda ingin menghapus pengaturan aplikasi?
+Tindakan ini tidak dapat dibatalkan.</value>
+  </data>
+  <data name="presenceTypePlaying" xml:space="preserve">
+    <value>Bermain</value>
+  </data>
+  <data name="presenceTypeListening" xml:space="preserve">
+    <value>Mendengarkan</value>
+  </data>
+  <data name="presenceTypeWatching" xml:space="preserve">
+    <value>Menonton</value>
+  </data>
+  <data name="presenceTypeCompeting" xml:space="preserve">
+    <value>Bersaing</value>
+  </data>
 </root>
