--- a/CustomRPC/ErrorReportViewer.es.resx
+++ b/CustomRPC/ErrorReportViewer.es.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="buttonOK.Text" xml:space="preserve">
-    <value>Ok</value>
+    <value>OK</value>
   </data>
   <data name="labelInfo.Text" xml:space="preserve">
     <value>CustomRP ha colapsado en la sesión anterior debido a la siguiente excepción no controlada:</value>
